--- a/test/fixtures/checks.yml
+++ b/test/fixtures/checks.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  check_type: MyString
+  check_type: Annual Checkup
   frequency: one
 
 two:
-  check_type: MyString
+  check_type: Dental Exam
   frequency: two
