--- a/test/fixtures/foods.yml
+++ b/test/fixtures/foods.yml
@@ -1,16 +1,16 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  food_type: MyString
+  name: Dry Food
+  food_type: Kibble
   amount: MyString
   description: MyText
   purpose: MyString
   notes: MyText
 
 two:
-  name: MyString
-  food_type: MyString
+  name: Wet Food
+  food_type: Canned
   amount: MyString
   description: MyText
   purpose: MyString
