--- a/test/fixtures/injuries.yml
+++ b/test/fixtures/injuries.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  description: MyText
-  severity: MyString
+  description: Broken leg
+  severity: Severe
 
 two:
-  description: MyText
-  severity: MyString
+  description: Minor scratch
+  severity: Mild
