--- a/test/fixtures/vaccines.yml
+++ b/test/fixtures/vaccines.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: Rabies Vaccine
   frequency: one
   mandatory: false
 
 two:
-  name: MyString
+  name: Distemper Vaccine
   frequency: two
   mandatory: false
