--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /.kamal/secrets
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
