Removing importmap and fixing tests

--- a/test/fixtures/injuries.yml
+++ b/test/fixtures/injuries.yml
@@ -2,8 +2,8 @@
 
 one:
   description: Broken leg
-  severity: Severe
+  severity: High
 
 two:
   description: Minor scratch
-  severity: Mild
+  severity: Low
