--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typescript": "^5.9.3"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
+    "build": "esbuild app/javascript/application.tsx --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.css -o ./app/assets/builds/application.css",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -31,6 +31,7 @@
   "dependencies": {
     "@hotwired/turbo-rails": "^8.0.20",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "react-router-dom": "^7.10.1"
   }
 }
